fixed image break on home page due to change in width in animations

--- a/src/pages/HomePage/components/dreams-section/MakeDreamsTrue.css
+++ b/src/pages/HomePage/components/dreams-section/MakeDreamsTrue.css
@@ -29,6 +29,7 @@
 	display: flex;
 	flex-direction: column;
 	justify-content: space-evenly;
+	width: 18vw;
 }
 .homePage__makeDreamsTrue__topPrices {
 	display: flex;
